# SSRPC

./: .gitignore  .gitmodules  LICENSE  README.md  SSRPC.py  STPDP.py  _numba_patches.py  demo.ipynb  environment.yaml  pyproject.toml  requirements.txt
ssrpc/: __init__.py  _patches.py  core.py  functional.py  stpdp.py
